// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Auth search results form no results should render correctly with no user and no results 1`] = `
<div>
  <div
    className="sc-VigVT dceoHE"
  >
    <div
      className="sc-jTzLTM jTliGH"
    >
      <form
        onSubmit={[Function]}
      >
        <label
          className="sc-bZQynM wCZqw"
          htmlFor="user"
        >
          <span
            className="sc-gzVnrw clQBNW"
          >
            Username or email address
          </span>
          <input
            className="sc-iwsKbI dkBthv"
            defaultValue=""
            id="user"
            name="user"
            onChange={[Function]}
            type="text"
          />
        </label>
        <button
          className="sc-gZMcBi iEwQUW"
          disabled={false}
          id="search-button"
          type="submit"
        >
          Search
        </button>
      </form>
    </div>
  </div>
</div>
`;

exports[`Auth search results form some results should render correctly with user and results 1`] = `
<div>
  <div
    className="sc-VigVT dceoHE"
  >
    <div
      className="sc-jTzLTM jTliGH"
    >
      <form
        onSubmit={[Function]}
      >
        <label
          className="sc-bZQynM wCZqw"
          htmlFor="user"
        >
          <span
            className="sc-gzVnrw clQBNW"
          >
            Username or email address
          </span>
          <input
            className="sc-iwsKbI dkBthv"
            defaultValue="someuser"
            id="user"
            name="user"
            onChange={[Function]}
            type="text"
          />
        </label>
        <button
          className="sc-gZMcBi iEwQUW"
          disabled={false}
          id="search-button"
          type="submit"
        >
          Search
        </button>
      </form>
    </div>
  </div>
  <table
    className="sc-EHOje kCMYgv"
  >
    <tbody
      className="sc-bwzfXH uTxCW"
    >
      <tr
        className="sc-ifAKCX cFlEyZ"
      >
        <th
          className="sc-bxivhb kZbmwT"
        >
          Name
        </th>
        <th
          className="sc-bxivhb kZbmwT"
        >
          Username
        </th>
        <th
          className="sc-bxivhb kZbmwT"
        >
          Email
        </th>
        <th
          className="sc-bxivhb kZbmwT"
        >
          Locked
        </th>
        <th
          className="sc-bxivhb kZbmwT"
        >
          Enabled
        </th>
      </tr>
      <tr
        className="sc-ifAKCX cFlEyZ"
      >
        <td
          className="sc-bxivhb jMmQxS"
        >
          Auth
           
          Adm
        </td>
        <td
          className="sc-bxivhb jMmQxS"
        >
          AUTH_ADM
        </td>
        <td
          className="sc-bxivhb jMmQxS"
        >
          auth_test2@digital.justice.gov.uk
        </td>
        <td
          className="sc-bxivhb jMmQxS"
        >
          Yes
        </td>
        <td
          className="sc-bxivhb jMmQxS"
        >
          No
        </td>
      </tr>
      <tr
        className="sc-ifAKCX cFlEyZ"
      >
        <td
          className="sc-bxivhb jMmQxS"
        >
          Auth
           
          Expired
        </td>
        <td
          className="sc-bxivhb jMmQxS"
        >
          AUTH_EXPIRED
        </td>
        <td
          className="sc-bxivhb jMmQxS"
        >
          auth_test2@digital.justice.gov.uk
        </td>
        <td
          className="sc-bxivhb jMmQxS"
        >
          No
        </td>
        <td
          className="sc-bxivhb jMmQxS"
        >
          Yes
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
